# LuaCodeEditor

./: .gitignore  .gitmodules  CMakeLists.txt  EditorScreen.qml  README.md  UiResources.qrc  install_dependencies.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: FileManager.cpp  FileManager.h  IntervalParser.cpp  IntervalParser.h  LuaCompilator.cpp  LuaCompilator.h  LuaProjectManager.cpp  LuaProjectManager.h  Models.cpp  Models.h
